<resources>
    <string name="app_name">Video Chat App</string>
    <string name="video_meeting_app">Video Meeting App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="your_example_com">your@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="a_few_details">We need a few details to get your account ready</string>
    <string name="fisrt_name">Fisrt Name</string>
    <string name="dummy_name">John</string>
    <string name="last_name">Last Name</string>
    <string name="dummy_name2">Doe</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to">Welcome To</string>
    <string name="meet">Meet</string>
    <string name="username">Username</string>
    <string name="create_meeting">CREATE MEETING</string>
    <string name="join_meeting">JOIN MEETING</string>
    <string name="meeting_code">Meeting Code</string>
    <string name="create_meeting_code">Create Meeting Code</string>
    <string name="enter_meeting_code">Enter Meeting Code</string>
    <string name="job_description">Job Description</string>
    <string name="meet2">MEET</string>
    <string name="dummy_email">johndoe@gmail.com</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="support_us">Support Us</string>
    <string name="app_info">App Info</string>
    <string name="dummy_job">Software Engineer</string>
</resources>