<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_background"
    tools:context=".Activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/welcome_to"
            android:textSize="@dimen/_35ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meet"
            android:gravity="center"
            android:textSize="@dimen/_25ssp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/splash_end_color"
            android:fontFamily="@font/ubuntu_regular"/>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:src="@mipmap/illustration_2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="@dimen/_18ssp"
        android:layout_margin="@dimen/_40sdp"
        android:text="@string/get_started"

        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/splash_start_color"/>


</RelativeLayout>