<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".Fragments.CreateMeetingFragment">

   <LinearLayout
       android:id="@+id/layoutHeader"
       android:layout_width="match_parent"
       android:layout_height="?actionBarSize"
       android:background="@color/white"
       android:elevation="@dimen/_10sdp"
       android:gravity="center_vertical"
       android:orientation="horizontal"
       android:paddingStart="@dimen/_8sdp"
       android:paddingEnd="@dimen/_8sdp"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="UselessParent">

      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/imageProfile"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:src="@mipmap/illustration_1"/>

      <TextView
          android:id="@+id/textTitle"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:text="@string/username"
          android:layout_marginStart="@dimen/_10sdp"
          android:layout_height="wrap_content"
          android:fontFamily="@font/ubuntu_regular"
          android:includeFontPadding="false"
          android:textColor="@color/colorBlack"
          android:textSize="@dimen/_15ssp"/>

      <ImageView
          android:id="@+id/textSignOut"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:contentDescription="@string/app_name"
          android:gravity="center"
          android:src="@drawable/ic_history"
          app:tint="@color/colorBlack"
          android:textColor="@color/colorBackground"/>

   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_marginTop="50dp"
       android:orientation="horizontal">

      <TextView
          android:id="@+id/createMeetingText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/create_meeting"
          android:fontFamily="@font/ubuntu_bold"
          android:textStyle="bold"
          android:padding="10dp"
          android:layout_marginEnd="@dimen/_8sdp"
          android:background="@drawable/meeting_text_background"
          android:textColor="@color/colorBlack"
          android:layout_gravity="center"/>

      <TextView
          android:id="@+id/joinMeetingText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/join_meeting"
          android:fontFamily="@font/ubuntu_bold"
          android:textStyle="bold"
          android:padding="10dp"
          android:background="@drawable/meeting_text_background"
          android:textColor="@color/colorBlack"
          android:layout_gravity="center"/>

   </LinearLayout>

   <ImageView
       android:id="@+id/illustration"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:contentDescription="@string/app_name"
       android:src="@drawable/illustration_3"
       android:layout_marginTop="90dp"/>

   <FrameLayout
       android:id="@+id/meetingContainer"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>

</LinearLayout>