<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:elevation="@dimen/_5sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProfile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/illustration_1"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/username"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15ssp"/>

<!--        <ImageView-->
<!--            android:id="@+id/textSignOut"-->
<!--            android:layout_width="35dp"-->
<!--            android:layout_height="35dp"-->
<!--            android:gravity="center"-->
<!--            android:src="@drawable/ic_history"-->
<!--            app:tint="@color/colorBlack"-->
<!--          />-->

        <TextView
            android:id="@+id/textSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
           android:text="@string/sign_out"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:clipToPadding="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/textErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/_13ssp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"/>

    <ImageView
        android:id="@+id/imageConference"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_conference"
        app:tint="@color/splash_end_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>